--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "tools/image"]
 	path = tools/image
 	url = https://github.com/rubeniskov/utools-image
+
+[submodule "tools/utils"]
+        path = tools/utils
+        url = https://github.com/rubeniskov/utools-utils
